wrap subscribe button in div to fix float bug with social share

--- a/app/assets/stylesheets/global/_page-header.scss
+++ b/app/assets/stylesheets/global/_page-header.scss
@@ -53,6 +53,15 @@
   }
 
   .header-secondary {
+    .subscribe-block {
+      display: inline;
+
+      @media (min-width: 35em) {
+        display: inline-block;
+        float: left;
+      }
+    }
+
     .social-share {
       margin-top: 1em;
 
